--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
@@ -9,9 +9,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.Wobbly.Spatial-Audio
+	maven_group = net.spatial.audio
 	archives_base_name = Spatial-Audio
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.31.0+1.16
+	fabric_version=0.32.0+1.16
